--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 html {
-    height: 100%; /* Makes the html site full height */
+    min-height: 100%;
 }
-
 body {
     background-image: linear-gradient(#FC5E55, #FA4083); /* Adds a gradient background */
     font-family: 'Roboto', sans-serif;
@@ -22,6 +21,7 @@ header {
     align-items: center;    /* FBox property that centers the child elements vertically */
     padding-top: 20px;
     padding-bottom: 20px;
+    border-bottom: 1px solid lightgray;
 }
 
 main {
@@ -119,5 +119,31 @@ main {
     display: inline-block;
     margin-top: 30px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.192);
+    border-radius: 2px;
 }
+
+.nav-buttons {
+    color: white;
+    font-family: 'Playfair Display', serif;
+    text-decoration: none;
+    padding: 11px 25px 11px 25px;
+    display: inline-block;
+    border: 1px solid white;
+}
+
+.testimonials {
+    display: flex; /* Makes the child elements in flex */
+    flex-wrap: wrap; /* FBox proprety that wraps the child elements*/
+    justify-content: space-between; /* Adds even space between the flex wrap */
+    margin-bottom: 100px;
+}
+
+.tbox {
+    width: 47%;
+    padding: 50px;
+    border: 1px solid white;
+    box-sizing: border-box; /* Keeps the box truly 47% while adding padding inside the box */
+    margin-top: 50px;
+}
+
 
